// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should not show description if absent 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="container"
    >
      <div
        class="content"
      >
        <div
          class="padded base"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="featureContent content"
      >
        Dis dem content yo
      </div>
    </div>
  </div>
</div>
`;

exports[`it should not show switch if onSwitch is absent 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="container"
    >
      <div
        class="content"
      >
        <div
          class="padded base"
        >
          <p
            class="base regular base text"
          >
            Send a notification to your client following up on an outstanding quote.
          </p>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="featureContent content"
      >
        Dis dem content yo
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a full FeatureSwitch 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="container"
    >
      <div
        class="content"
      >
        <div
          class="padded base"
        >
          <h4
            class="base bold large heading"
          >
            Quote follow-up
          </h4>
          <p
            class="base regular base text"
          >
            Send a 
            <a
              href="www.fakeurl.com"
              rel="noreferrer"
              target="_blank"
            >
              notification
            </a>
             to your 
            <em
              class="base regular italic"
            >
              client
            </em>
             following up on an 
            <b
              class="base bold"
            >
              outstanding quote
            </b>
            .
          </p>
        </div>
      </div>
      <div
        class="action"
      >
        <button
          aria-checked="true"
          aria-label="Send a [notification](www.fakeurl.com) to your _client_ following up on an **outstanding quote**."
          class="track switch isChecked"
          role="switch"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-testid="checkmark"
              style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
                style="fill: var(--color-surface);"
              />
            </svg>
          </span>
          <span
            class="toggle"
          />
        </button>
        <input
          type="hidden"
          value="true"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="featureContent content enabled"
      >
        Dis dem content yo
      </div>
      <div
        class="action"
      >
        <button
          class="button base work tertiary buttonChildren"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Edit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a subdued FeatureSwitch content 1`] = `
<div>
  <div
    class="padded base"
  >
    <div
      class="container"
    >
      <div
        class="content"
      >
        <div
          class="padded base"
        >
          <p
            class="base regular base text"
          >
            Send a notification to your client following up on an outstanding quote.
          </p>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="featureContent content"
      >
        Dis dem content yo
      </div>
    </div>
  </div>
</div>
`;
